# generals

./: .env.example  .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-smoke.txt  requirements-train.txt  requirements.txt
.github/workflows/: smoke.yml
checkpoints/: README.md
configs/models/: README.md  temporal_ewsc_explicit_k8_v2.json  temporal_ewsc_k8_v1.json  temporal_ewsc_k8_v2.json  temporal_fixed_k16_gru_v2.json  (+11 more)
docs/: README.md  model-card.md  online-play.md  reproducibility.md
scripts/: analyze_phase1_validation.py  audit_temporal_checkpoint.py  benchmark_temporal_latency.py  evaluate_city_behavior.py  evaluate_hidden_state.py  evaluate_match.py  evaluate_temporal_checkpoint.py  prepare_replay_shards.py  render_match.py  run_phase1_ewsc_k8_screen.ps1  run_phase1_fixed_screen.ps1  run_phase1_k4_k16_screen.ps1  run_phase1_k8_final_matches.ps1  run_phase1_k8_gru_screen.ps1  run_phase1_k8_long20k.ps1  run_phase1_k8_long50k.ps1  run_phase1_k8_v2_long_pipeline.ps1  run_phase1_k8_v2_resume_long_pipeline.ps1  run_phase1_k8_v2_screen.ps1  run_phase1_long_supervisor.py  run_phase2_ewsc_explicit_k8_screen.ps1  run_remote_agent.py  summarize_city_capture_outcome.py  train_bc.py  train_ppo.py
tests/: test_agents_and_viz.py  test_expander_match.py  test_flobot.py  test_mapgen.py  test_matches.py  test_remote.py  test_sim_observation.py  test_sim_rules.py  test_training_bc.py  test_training_chunking.py  test_training_critic.py  test_training_ppo.py  test_training_router.py  test_training_temporal.py
(+91 files in other folders)
