[project]
name = "generals-bot"
version = "0.1.0"
description = "Generals.io simulator, behavior cloning, PPO self-play, staged reward shaping, and online bot adapter."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Zemu Zhu" },
]
dependencies = [
  "numpy>=1.24",
  "python-socketio[client]>=5.0",
  "torch>=2.2",
  "tqdm>=4.66",
  "tensorboard>=2.16",
]

[tool.ruff]
line-length = 100
